--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
             <span id='closeMessageBar' class='arrow-t-b' title='close message bar.'><span class='arrow-l-r' ></span></span>
 		</div>
 
-        <form id='formc' name='formc' method='post' action='http://www.spreadsheetserver.com/server1/g/submit/submit.aspx' target='_top'>
+        <form action='http://www.spreadsheetserver.com/server1/g/submit/submit.aspx' method='post' name='formc' target='_top' id='formc' style="">
 		    <input type='hidden' id='xl_spreadsheet' name='xl_spreadsheet' value='TrappFly' />
             <input type='hidden' id='xl_client' name='xl_client' value='x7.8.6078.0' />
+			<p style="background-color: #f0efbf; font-size: 25px; font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, sans-serif; padding-top: 15px; padding-left: 25px;"> TrappFly Version 1.0.25</p>
         <div id="accordion">
             <h3 ><a href="#sheet-1">Trap Data</a></h3>
             <div id="sheet-1">
@@ -343,9 +344,7 @@ AUAAAAAAAAAAAAAAAAAAAAYXBwZmx5X3RlbXBsYXRlXGFwcGZseS50ZW1wbGF0ZQEAEACgMQAAAAAAAM
 xwAFAAAAAAAAAAAAAAAXwgAAGFwcGZseV90ZW1wbGF0ZVxpbWFnZTAwMi5wbmcBABAAczQAAAAAAAB4NAAAAAAAAFBLBQYAAAAAAwADAB8BAAAlPQAAAAA="><input type="hidden" id="xl_md5" name="xl_md5" value="He612e+CN3hvor1dL2HVKQ==">
         </form>
         <div class='toolbar no-print'>
-			<a class='poweredby-logo' href='http://www.spreadsheetconverter.com/excel-html-web.htm' target='_blank' tabindex='-1'>
-				<img src='powered-by-spreadsheetconverter.png' title='Convert Excel spreadsheet to online form' alt='Convert Excel spreadsheet to online form'/> 
-			</a>
+			
             <!--liveshare
                 <section id='ssc-ls'></section>-->
             <!--/liveshare-->
