--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<div id="accordion">
             <h3 ><a href="#sheet-1">Main</a></h3>
             <div id="sheet-1">
-                <table width= '532' cellspacing='0' cellpadding='0' style='border-spacing:0;' onkeydown='javascript:navigate(event);'>
+                <table width= '100%' cellspacing='0' cellpadding='0' style='border-spacing:0;' onkeydown='javascript:navigate(event);'>
 					<col width='52'/>
 					<col width='259'/>
 					<col width='169'/>
