--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						<span style='
   position:absolute;z-index:1;margin-left:0px;margin-top:0px;width:430px;
   height:101px'>
-							<img src='image002.png' width='100%' height='101' alt='' />
+							<center><img src='image002.png' width='110' height='101' alt='' /></center>
 						</span>
 						</td>
 						<td class='ee100' style='height:43pt;'>&nbsp;</td>
