--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             <h3 ><a href="#sheet-1">Main</a></h3>
             <div id="sheet-1">
                 <table width= '100%' cellspacing='0' cellpadding='0' style='border-spacing:0;' onkeydown='javascript:navigate(event);'>
-					<col width='52'/>
-					<col width='259'/>
-					<col width='169'/>
-					<col width='52'/>
+					<col width='15%'/>
+					<col width='40%'/>
+					<col width='30%'/>
+					<col width='15%'/>
                     <tr style='height:26pt'>
 						<td class='ee100' style='height:26pt;'>&nbsp;</td>
 						<td class='ee103' style='height:26pt;' colspan = '2'>
@@ -102,7 +102,7 @@
 						<td class='ee100' style='height:43pt;'>&nbsp;</td>
 						<td class='ee109' style='height:43pt;vertical-align:top;' colspan = '2' rowspan = '2'>
 						<span style='
-  position:absolute;z-index:1;margin-left:0px;margin-top:0px;width:75%;
+  position:absolute;z-index:1;margin-left:0px;margin-top:0px;width:65%;
   height:101px'>
 							<img src='image002.png' width='100%' height='101' alt='' />
 						</span>
@@ -237,11 +237,11 @@
             </div>
             <h3 ><a href="#sheet-3">NewTraps</a></h3>
             <div id="sheet-3">
-                <table width= '536' cellspacing='0' cellpadding='0' style='border-spacing:0;' onkeydown='javascript:navigate(event);'>
-					<col width='80'/>
-					<col width='188'/>
-					<col width='188'/>
-					<col width='80'/>
+                <table width= '100%' cellspacing='0' cellpadding='0' style='border-spacing:0;' onkeydown='javascript:navigate(event);'>
+					<col width='15%'/>
+					<col width='40%'/>
+					<col width='30%'/>
+					<col width='15%'/>
                     <tr style='height:21pt'>
 						<td class='ee100' style='height:21pt;'>&nbsp;</td>
 						<td class='ee103' style='height:21pt;' colspan = '2'>
@@ -253,9 +253,9 @@
 						<td class='ee100' style='height:77pt;'>&nbsp;</td>
 						<td class='ee109' style='height:77pt;vertical-align:top;' colspan = '2' rowspan = '2'>
 						<span style='
-  position:absolute;z-index:1;margin-left:0px;margin-top:0px;width:376px;
+  position:absolute;z-index:1;margin-left:0px;margin-top:0px;width:65%;
   height:93px'>
-							<img src='image004.png' width='376' height='93' alt='' />
+							<img src='image004.png' width='100%' height='93' alt='' />
 						</span>
 						</td>
 						<td class='ee100' style='height:77pt;'>&nbsp;</td>
