--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         });
     </script>
     <link rel='stylesheet' type='text/css' href='' media='print' id='printallcss' />
+	<!-- snip -->
+	
+	<!-- snip -->
     </head>
     <body onload='LoadFromQueryString();GetCookies();recalc_onclick("");' onunload='SetCookies();'>
         <noscript style='color:#F15623;'>
@@ -607,6 +610,10 @@ function showPosition(position)
   }
 </script></h3></h5></li></ul>
 <br>
+
+<!-- snip -->
+
+<!-- snip -->
     </body>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/ssc.liveshare.min.js"></script>
